@@ -1,3 +1,7 @@
+[B]Version 1.7.2[/B]
+- Updated Python Version
+- Added Language Tag
+
 [B]Version 1.7.1[/B]
 - Changed Repo Location
 
